--- a/src/main/resources/com/example/little_pub/teste.fxml
+++ b/src/main/resources/com/example/little_pub/teste.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #122C33; -fx-pref-width: 1280; -fx-pref-height: 720;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.little_pub.HelloController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #122C33; -fx-pref-width: 1280; -fx-pref-height: 720;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.little_pub.HelloController">
    <children>
       <Pane layoutX="617.0" layoutY="83.0" prefHeight="684.0" prefWidth="200.0" style="-fx-background-color: #FFFFFF; -fx-pref-width: 300; -fx-pref-height: 450;" />
       <Pane layoutX="950.0" layoutY="83.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFFFFF; -fx-pref-width: 300; -fx-pref-height: 450;" />
@@ -24,9 +27,11 @@
             <Font name="Broadway" size="24.0" />
          </font>
       </Label>
-      <TextField layoutX="35.0" layoutY="38.0" promptText="Nome do cliente" />
-      <TextField layoutX="198.0" layoutY="38.0" promptText="Tempo no Bar" />
-      <TextField layoutX="362.0" layoutY="38.0" promptText="Tempo em Casa" />
-      <Button layoutX="546.0" layoutY="38.0" mnemonicParsing="false" onAction="#onAddClientButtonClick" text="Adicionar cliente" />
+      <TextField layoutY="70.0" promptText="Nome do cliente" />
+      <TextField layoutX="164.0" layoutY="71.0" promptText="Tempo no Bar" />
+      <TextField layoutX="330.0" layoutY="71.0" promptText="Tempo em Casa" />
+      <Button layoutX="493.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAddClientButtonClick" text="Adicionar cliente" />
+      <TextField layoutX="164.0" layoutY="29.0" promptText="Número de cadeiras" />
+      <Button layoutX="349.0" layoutY="27.0" mnemonicParsing="false" onAction="#onConfigureBarCick" text="Criar o Bar" />
    </children>
 </Pane>
