--- a/src/main/resources/com/example/little_pub/home.fxml
+++ b/src/main/resources/com/example/little_pub/home.fxml
@@ -4,22 +4,21 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #122C33; -fx-pref-width: 1280; -fx-pref-height: 720;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.little_pub.HelloController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #1e5da0; -fx-pref-width: 1280; -fx-pref-height: 720;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.little_pub.HelloController">
     <children>
-        <Pane layoutX="617.0" layoutY="83.0" prefHeight="684.0" prefWidth="200.0" style="-fx-background-color: #FFFFFF; -fx-pref-width: 300; -fx-pref-height: 450;" />
         <Pane layoutX="950.0" layoutY="83.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFFFFF; -fx-pref-width: 300; -fx-pref-height: 450;" />
-        <Label layoutX="733.0" layoutY="36.0" text="CASA" textFill="WHITE">
+        <Label layoutX="733.0" layoutY="36.0" text="CASA" textFill="#e21d1a">
             <font>
                 <Font name="Broadway" size="24.0" />
             </font>
         </Label>
-        <Label layoutX="1073.0" layoutY="42.0" text="BAR" textFill="WHITE">
+        <Label layoutX="1073.0" layoutY="42.0" text="BAR" textFill="#e21d1a">
             <font>
                 <Font name="Broadway" size="24.0" />
             </font>
         </Label>
         <ListView layoutX="618.0" layoutY="577.0" prefHeight="129.0" prefWidth="634.0" />
-        <Label layoutX="905.0" layoutY="539.0" text="FILA" textFill="WHITE">
+        <Label layoutX="905.0" layoutY="539.0" text="FILA" textFill="#e21d1a">
             <font>
                 <Font name="Broadway" size="24.0" />
             </font>
@@ -30,5 +29,6 @@
         <TextField fx:id="homeTimeField" layoutX="330.0" layoutY="71.0" promptText="Tempo em Casa" />
         <Button fx:id="addBar" layoutX="349.0" layoutY="27.0" mnemonicParsing="false" onAction="#onConfigureBarClick" text="Criar o Bar" />
         <Button fx:id="addClient" layoutX="493.0" layoutY="71.0" mnemonicParsing="false" onAction="#onAddClientClick" text="Adicionar cliente" />
+        <Pane layoutX="617.0" layoutY="83.0" prefHeight="684.0" prefWidth="200.0" style="-fx-background-color: #FFFFFF; -fx-pref-width: 300; -fx-pref-height: 450;" />
     </children>
 </Pane>
